--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>ScrollToTOP</title>
     <link rel="stylesheet" href="css/ScrollToTOP.css">
+    <!--JQuery CND request-->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     
 </head>
